Restore arm64 build stuff

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -194,19 +194,19 @@ stages:
         displayName: Build x86
 
       # Build the arm64 shared framework
-      #- script: ./eng/build.cmd
-      #          -ci
-      #          -arch arm64
-      #          -sign
-      #          -pack
-      #          -noBuildJava
-      #          -noBuildNative
-      #          /p:DotNetSignType=$(_SignType)
-      #          /p:OnlyPackPlatformSpecificPackages=true
-      #          $(_BuildArgs)
-      #          $(_InternalRuntimeDownloadArgs)
-      #          $(WindowsArm64LogArgs)
-      #  displayName: Build ARM64
+      - script: ./eng/build.cmd
+                -ci
+                -arch arm64
+                -sign
+                -pack
+                -noBuildJava
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:OnlyPackPlatformSpecificPackages=true
+                $(_BuildArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64LogArgs)
+        displayName: Build ARM64
 
       # Submit a manual build (in public or internal project) to validate changes to site extensions.
       - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
@@ -248,21 +248,21 @@ stages:
         displayName: Build Installers
 
       # Windows installers bundle for arm64
-      #- script: ./eng/build.cmd
-      #          -ci
-      #          -noBuildRepoTasks
-      #          -arch arm64
-      #          -sign
-      #          -buildInstallers
-      #          -noBuildNative
-      #          /p:DotNetSignType=$(_SignType)
-      #          /p:AssetManifestFileName=aspnetcore-win.xml
-      #          $(_BuildArgs)
-      #          $(_PublishArgs)
-      #          /p:PublishInstallerBaseVersion=true
-      #          $(_InternalRuntimeDownloadArgs)
-      #          $(WindowsArm64InstallersLogArgs)
-      #  displayName: Build ARM64 Installers
+      - script: ./eng/build.cmd
+                -ci
+                -noBuildRepoTasks
+                -arch arm64
+                -sign
+                -buildInstallers
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:AssetManifestFileName=aspnetcore-win.xml
+                $(_BuildArgs)
+                $(_PublishArgs)
+                /p:PublishInstallerBaseVersion=true
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64InstallersLogArgs)
+        displayName: Build ARM64 Installers
 
       # A few files must also go to the VS package feed.
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
