--- a/src/Components/test/E2ETest/Microsoft.AspNetCore.Components.E2ETests.csproj
+++ b/src/Components/test/E2ETest/Microsoft.AspNetCore.Components.E2ETests.csproj
@@ -6,9 +6,9 @@
     -->
     <_BuildAndTest>false</_BuildAndTest>
     <_BuildAndTest
-        Condition=" '$(ContinuousIntegrationBuild)' == true AND '$(EXECUTE_COMPONENTS_E2E_TESTS)' == true ">true</_BuildAndTest>
+        Condition=" '$(ContinuousIntegrationBuild)' == 'true' AND '$(EXECUTE_COMPONENTS_E2E_TESTS)' == 'true' ">true</_BuildAndTest>
     <_BuildAndTest
-        Condition=" '$(ContinuousIntegrationBuild)' != true AND '$(SkipTestBuild)' != true ">true</_BuildAndTest>
+        Condition=" '$(ContinuousIntegrationBuild)' != 'true' AND '$(SkipTestBuild)' != 'true' ">true</_BuildAndTest>
     <ExcludeFromBuild Condition=" !$(_BuildAndTest) ">true</ExcludeFromBuild>
     <SkipTests Condition=" !$(_BuildAndTest) ">true</SkipTests>
   </PropertyGroup>
@@ -24,7 +24,7 @@
     <BuildHelixPayload>false</BuildHelixPayload>
 
     <!-- Run only on platforms where we support Selenium. -->
-    <SkipTests Condition=" '$(SeleniumE2ETestsSupported)' != true ">true</SkipTests>
+    <SkipTests Condition=" '$(SeleniumE2ETestsSupported)' != 'true' ">true</SkipTests>
 
     <!-- Tests do not work on Helix or when bin/ directory is not in project directory due to undeclared dependency on test content. -->
     <BaseOutputPath />
@@ -89,7 +89,7 @@
   </ItemGroup>
 
   <!-- Shared testing infrastructure for running E2E tests using selenium -->
-  <Import Condition=" '$(SkipTests)' != true " Project="$(SharedSourceRoot)E2ETesting\E2ETesting.targets" />
+  <Import Condition=" '$(SkipTests)' != 'true' " Project="$(SharedSourceRoot)E2ETesting\E2ETesting.targets" />
 
   <ItemGroup>
     <!-- Shared descriptor infrastructure with MVC -->
