!nit! Be consistent about `msbuild` quotes - always quote comparison operands in `Condition`s - `msbuild` allows unquoted operands but complains when an operand is empty   - this error likely means some of these `Condition`s can't be `true`

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -24,8 +24,8 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Resx settings">
-    <GenerateResxSource Condition="$(GenerateResxSource) == ''">true</GenerateResxSource>
-    <GenerateResxSourceEmitFormatMethods Condition="$(GenerateResxSourceEmitFormatMethods) == ''">true</GenerateResxSourceEmitFormatMethods>
+    <GenerateResxSource Condition="'$(GenerateResxSource)' == ''">true</GenerateResxSource>
+    <GenerateResxSourceEmitFormatMethods Condition="'$(GenerateResxSourceEmitFormatMethods)' == ''">true</GenerateResxSourceEmitFormatMethods>
   </PropertyGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.DotNet.Arcade.Sdk" />
