--- a/src/Mvc/test/WebSites/Directory.Build.targets
+++ b/src/Mvc/test/WebSites/Directory.Build.targets
@@ -4,7 +4,7 @@
   <!-- Work around https://github.com/dotnet/sdk/issues/23777. Reset ContentWithTargetPath items if not building. -->
   <Target Name="RemoveCshtmlFiles"
       BeforeTargets="GetCopyToPublishDirectoryItems"
-      Condition=" '$(RazorCompileOnPublish)' != false AND '$(NoBuild)' == true ">
+      Condition=" '$(RazorCompileOnPublish)' != 'false' AND '$(NoBuild)' == 'true' ">
     <ItemGroup>
       <ContentWithTargetPath>
         <CopyToPublishDirectory Condition=" '%(Extension)' == '.cshtml' ">None</CopyToPublishDirectory>
