--- a/src/Servers/IIS/IIS/src/Microsoft.AspNetCore.Server.IIS.csproj
+++ b/src/Servers/IIS/IIS/src/Microsoft.AspNetCore.Server.IIS.csproj
@@ -36,7 +36,7 @@
   <ItemGroup Condition=" '$(UseIisNativeAssets)' == 'true' ">
     <NativeProjectReference Include="$(MSBuildThisFileDirectory)..\..\AspNetCoreModuleV2\InProcessRequestHandler\InProcessRequestHandler.vcxproj" Platform="x64" />
     <NativeProjectReference Include="$(MSBuildThisFileDirectory)..\..\AspNetCoreModuleV2\InProcessRequestHandler\InProcessRequestHandler.vcxproj" Platform="Win32" />
-    <NativeProjectReference Include="$(MSBuildThisFileDirectory)..\..\AspNetCoreModuleV2\InProcessRequestHandler\InProcessRequestHandler.vcxproj" Platform="ARM64" />    
+    <NativeProjectReference Include="$(MSBuildThisFileDirectory)..\..\AspNetCoreModuleV2\InProcessRequestHandler\InProcessRequestHandler.vcxproj" Platform="ARM64" />
 
     <UpToDateCheckInput Include="$(AspNetCoreModuleV2InProcessHandlerDll)" />
   </ItemGroup>
@@ -56,7 +56,7 @@
     <UpToDateCheckInput Include="@(InProcessComponents)" />
   </ItemGroup>
 
-  <Target Name="AddPackNativeComponents" BeforeTargets="_GetPackageFiles" Condition="$(PackNativeAssets) == 'true'">
+  <Target Name="AddPackNativeComponents" BeforeTargets="_GetPackageFiles" Condition="'$(PackNativeAssets)' == 'true'">
     <ItemGroup>
       <None Include="%(InProcessComponents.DllLocation)"
             Pack="true"
@@ -67,7 +67,7 @@
   <Target Name="AddRunNativeComponents"
           BeforeTargets="AssignTargetPaths"
           DependsOnTargets="DebugSymbolsProjectOutputGroup"
-          Condition="$(PackNativeAssets) == 'true'">
+          Condition="'$(PackNativeAssets)' == 'true'">
     <ItemGroup>
       <None Include="%(InProcessComponents.DllLocation)" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" Condition="Exists('%(InProcessComponents.DllLocation)')" Link="%(InProcessComponents.Platform)\%(InProcessComponents.NativeAsset).dll" />
     </ItemGroup>
