!nit! Be consistent about `msbuild` quotes (#40108)
- always quote comparison operands in `Condition`s

Co-authored-by: Tanay Parikh <TanayParikh@users.noreply.github.com>

--- a/src/Components/WebAssembly/WebAssembly.Authentication/src/Microsoft.AspNetCore.Components.WebAssembly.Authentication.csproj
+++ b/src/Components/WebAssembly/WebAssembly.Authentication/src/Microsoft.AspNetCore.Components.WebAssembly.Authentication.csproj
@@ -76,7 +76,7 @@
       <_InteropBuildOutput Include="$(YarnWorkingDir)dist\$(Configuration)\**" Exclude="$(YarnWorkingDir)dist\.gitignore" />
     </ItemGroup>
 
-    <DefineStaticWebAssets Condition="@(_InteropBuildOutput) != ''"
+    <DefineStaticWebAssets Condition="'@(_InteropBuildOutput)' != ''"
       SourceType="Computed"
       SourceId="$(PackageId)"
       ContentRoot="$(YarnWorkingDir)dist\$(Configuration)\"
