Address some infrastructure nits - allow RunHelix.ps1 to use any Helix queue - remove useless `$(IsPackable)` setting - remove an extra App.Runtime reference; App.Ref brings it in - in helix.proj:   - tie into inner `BeforeTest` target; ignore `Build` target     - do less work e.g. perform a few fewer up-to-date checks   - don't load NuGet.targets   - use `<Choose/>` to make some either/or options more obvious   - remove some settings     - e.g. leave `$(HelixTestConfigurationFilePath)` stuff to the Helix SDK     - Helix SDK does most of these but `$(EnableXUnitReporter)` has been obsolete for a while

--- a/eng/targets/Helix.targets
+++ b/eng/targets/Helix.targets
@@ -140,7 +140,10 @@
     </ItemGroup>
 
     <PropertyGroup>
-      <BuildHelixPayload Condition="'@(_HelixApplicableTargetQueue->Count())' == '0'">false</BuildHelixPayload>
+      <!-- Check HelixTargetQueues to allow RunHelix.ps1 to submit jobs anywhere. -->
+      <BuildHelixPayload
+          Condition=" '$(HelixTargetQueues)' == '' AND @(_HelixApplicableTargetQueue->Count()) == 0 ">false</BuildHelixPayload>
+
       <BuildHelixPayload Condition="'$(IsArm64HelixQueue)' == 'true' AND '$(SkipHelixArm)' == 'true'">false</BuildHelixPayload>
       <BuildHelixPayload Condition="$(HelixTargetQueue.StartsWith('%28Alpine.')) AND '$(SkipHelixAlpine)' == 'true'">false</BuildHelixPayload>
       <BuildHelixPayload Condition="$(SkipHelixQueues.Contains('$(HelixTargetQueue)'))">false</BuildHelixPayload>
@@ -214,7 +217,6 @@
     </ItemGroup>
   </Target>
 
-  <Target Name="_CreateHelixPayloadInner" Returns="@(HelixWorkItem)" DependsOnTargets="_SetCreateHelixPayload;_CreateHelixWorkItem">
-  </Target>
-
+  <Target Name="_CreateHelixPayloadInner" Returns="@(HelixWorkItem)"
+      DependsOnTargets="_SetCreateHelixPayload;_CreateHelixWorkItem"/>
 </Project>
