--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -543,6 +543,7 @@ stages:
         $(_InternalRuntimeDownloadArgs)
       installNodeJs: false
       installJdk: false
+      disableComponentGovernance: true
       skipComponentGovernanceDetection: true
       artifacts:
       - name: Linux_musl_x64_Logs
